added directive for gigs

--- a/app/index.html
+++ b/app/index.html
@@ -84,6 +84,7 @@
         <script src="./bower_components/angular-touch/angular-touch.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/directives/gigThumbnail.js"></script>
         <!-- endbuild -->
 </body>
 </html>
