--- a/app/index.html
+++ b/app/index.html
@@ -55,7 +55,7 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team and Eoinerd!!</p>
+        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team and Eoinerd!! farttttt</p>
       </div>
     </div>
 
