--- a/app/index.html
+++ b/app/index.html
@@ -55,7 +55,7 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Eoinerd team!!!!</p>
+        <p><span class="glyphicon glyphicon-heart"></span> from the Eoinerd team!!!sdfsdf!</p>
       </div>
     </div>
 
