images for artist working - glyphicons showing

--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">gigFinder</a>
+            <a class="navbar-brand" href="#/">GigFinder</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
@@ -43,6 +43,8 @@
               <li class="active"><a href="#/">Home</a></li>
               <li><a ng-href="#/about">About</a></li>
               <li><a ng-href="#/">Contact</a></li>
+              <li><a ng-href="#/search">Search</a></li>
+              <li><a ng-href="#/connect">Connect</a></li>
             </ul>
           </div>
         </div>
