--- a/app/index.html
+++ b/app/index.html
@@ -34,17 +34,18 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">GigFinder</a>
+            <a class="navbar-brand" href="/">GigFinder</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
+              <li class="active"><a href="/">Home</a></li>
               <li><a ng-href="#/about">About</a></li>
               <li><a ng-href="#/">Contact</a></li>
               <li><a ng-href="#/search">Search</a></li>
-              <li><a ng-href="#/connect">Connect</a></li>
+              <li><a ng-href="/gig/2">Connect</a></li>
+              <li><a href="/newGig">Add New Gig</a></li>
             </ul>
           </div>
         </div>
@@ -52,7 +53,7 @@
     </div>
 
     <div class="container">
-    <div ng-view=""></div>
+    <ng-view></ng-view>
     </div>
 
     <div class="footer">
@@ -79,6 +80,7 @@
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
+        <!-- <script src="./bower_components/jquery/dist/jquery-min.js"></script> -->
         <script src="./bower_components/angular/angular.js"></script>
         <script src="./bower_components/angular-aria/angular-aria.js"></script>
         <script src="./bower_components/angular-route/angular-route.js"></script>
@@ -86,8 +88,10 @@
         <script src="./bower_components/angular-sanitize/angular-sanitize.js"></script>
         <script src="./bower_components/angular-touch/angular-touch.js"></script>
         <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/GigListController.js"></script>
         <script src="scripts/directives/gigThumbnail.js"></script>
+        <script src="scripts/services/gigData.js"></script>
+        <!-- <script src="./bower_components/bootstrap/dist/js/bootstrap-min.js"></script> -->
         <!-- endbuild -->
 </body>
 </html>
