progress on details routing

--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,7 @@
               <li><a ng-href="#/">Contact</a></li>
               <li><a ng-href="#/search">Search</a></li>
               <li><a ng-href="/gig/2">Connect</a></li>
-              <li><a href="/newGig">Add New Gig</a></li>
+              <li><a href="#/newGig">Add New Gig</a></li>
             </ul>
           </div>
         </div>
