--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,13 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/bootstrap.min.css">
+
+    <style>
+      #attraction-panel {
+        display:none;
+      }
+    </style>
+    
     <!-- endbuild -->
   </head>
   <body ng-app="gigFinderApp">
@@ -26,8 +33,8 @@
       <div class="navbar navbar-default" role="navigation">
         <div class="container">
           <div class="navbar-header">
-
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
+            
+            <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
               <span class="sr-only">Toggle navigation</span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
@@ -37,7 +44,7 @@
             <a class="navbar-brand" href="/">GigFinder</a>
           </div>
 
-          <div class="collapse navbar-collapse" id="js-navbar-collapse">
+          <div class="collapse navbar-collapse" id="navbarResponsive">
 
             <ul class="nav navbar-nav">
               <li class="active"><a href="/#/">Home</a></li>
@@ -58,7 +65,7 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Eoinerd team!!!sdfsdf!</p>
+        <p><span class="glyphicon glyphicon-heart"></span> from the Eoinerd team!</p>
       </div>
     </div>
 <input type="hidden" id="apiResponse"/>
@@ -97,7 +104,8 @@
         <script src="scripts/controllers/EditGigController.js"></script>
         <script src="scripts/directives/gigThumbnail.js"></script>
         <script src="scripts/services/gigData.js"></script>
-        <!-- <script src="./bower_components/bootstrap/dist/js/bootstrap-min.js"></script> -->
+        <script src="./bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js" async defer></script>
         <!-- endbuild -->
 </body>
 </html>
